orchestration/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: eshop
    annotations:
        kubernetes.io/ingress.class: nginx
        ingress.kubernetes.io/ssl-redirect: "true"
        cert-manager.io/cluster-issuer: letsencrypt-prod
        nginx.ingress.kubernetes.io/proxy-body-size: "64m"
spec:
    tls:
        -   hosts: ~
            secretName: tls-certificate
    rules:
